# hvr-log

./: CMakeLists.txt  InstallTest.sh  README.md
.ci/azure-pipelines/: build-pullrequest-windows.yml  build-unit-test-ubuntu.yml  build-unit-test-windows.yml
apps/: CMakeLists.txt
apps/Log/: CMakeLists.txt
apps/Log/src/: GlogSample.cpp  glog_sample.cpp
apps/LogMT/: CMakeLists.txt
apps/LogMT/src/: GlogSample.cpp
doc/: info.dox
modules/: CMakeLists.txt
modules/Log/: CMakeLists.txt  info.dox
modules/Log/include/Hvr/Log/: Log.h
modules/Log/src/: Log.cpp
unit-test/: CMakeLists.txt
unit-test/Log/: CMakeLists.txt
unit-test/Log/include/: LogTest.h
unit-test/Log/src/: LogTest.cpp  main.cpp
